@@ -11,5 +11,5 @@ Categories=GNOME;GTK;Settings;Accessibility;
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-control-center
-X-GNOME-Bugzilla-Component=other capplets
+X-GNOME-Bugzilla-Component=Preferred applications
 X-GNOME-Bugzilla-Version=@VERSION@
