@@ -10,7 +10,7 @@ StartupNotify=true
 Categories=
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
-X-GNOME-Bugzilla-Product=control-center
+X-GNOME-Bugzilla-Product=gnome-control-center
 X-GNOME-Bugzilla-Component=other capplets
 X-GNOME-Bugzilla-Version=@VERSION@
 X-GNOME-Autostart-enabled=true
