@@ -10,6 +10,6 @@ StartupNotify=true
 Categories=GNOME;GTK;Settings;Accessibility;
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
-X-GNOME-Bugzilla-Product=control-center
+X-GNOME-Bugzilla-Product=gnome-control-center
 X-GNOME-Bugzilla-Component=other capplets
 X-GNOME-Bugzilla-Version=@VERSION@
