@@ -1,3 +1,13 @@
+2007-07-08  Jens Granseuer  <jensgr@gmx.net>
+
+	* Makefile.am:
+	* default-applications-accessibility.desktop.in.in:
+	* default-applications.desktop.in.in:
+	* gnome-at-mobility.desktop.in.in:
+	* gnome-at-session.desktop.in.in:
+	* gnome-at-visual.desktop.in.in: fix bugzilla info and clean up the
+	Makefile a bit
+
 2007-07-07  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-da-capplet.c: (entry_focus_out_event_cb),
